# SECundum_Webshop

./: .gitignore  README.md  SECundum_WebshopServerlira_warehouse_v1.txt  Sz_bizt.pptx  Sz_bizt2.pptx
.github/workflows/: build.yml
SECundum_WebshopClient/: package-lock.json
SECundum_WebshopClient/SECundumWebshopClient/: README.md  angular.json  karma.conf.js  package-lock.json  package.json
SECundum_WebshopClient/SECundumWebshopClient/e2e/src/: app.e2e-spec.ts
SECundum_WebshopClient/SECundumWebshopClient/src/: index.html
SECundum_WebshopClient/SECundumWebshopClient/src/app/: app-routing.module.ts  app.component.css  app.component.html  app.component.spec.ts  app.component.ts  app.module.ts  auth.guard.ts  auth.service.ts  caff.ts  caff_service.ts  comment.ts  comment_service.ts  gallery.css  nav.css  user.ts  user_service.ts
SECundum_WebshopClient/SECundumWebshopClient/src/helper/: auth.interceptor.ts
SECundum_WebshopParser/: CMakeLists.txt
SECundum_WebshopParser/SECundum_WebshopParser/: CMakeLists.txt  SECundum_WebshopParser.cpp  SECundum_WebshopParser.h
SECundum_WebshopParser/SECundum_WebshopParser/CAFF/: CAFFAnimation.cpp  CAFFAnimation.h  CAFFCredits.cpp  CAFFCredits.h  CAFFHeader.cpp  CAFFHeader.h  CAFFObject.cpp  CAFFObject.h
SECundum_WebshopParser/SECundum_WebshopParser/CIFF/: CIFFContent.cpp  CIFFContent.h  CIFFHeader.cpp  CIFFHeader.h  CIFFObject.cpp  CIFFObject.h  CIFFTester.cpp  CIFFTester.h
SECundum_WebshopServer/: pom.xml
SECundum_WebshopServer/src/main/resources/: application.properties  serviceAccountKey.json
(+34 files in other folders)
